# essentia-server

./: .gitignore  Cargo.toml  docker-compose.yaml
docs/sample_files/: config.yaml
src/: main.rs
src/cli/: arg_parse.rs  mod.rs
src/data/: datasource.rs  mod.rs  mongo.rs
src/data/models/: account.rs
src/engine/: engine.rs
src/engine/models/: account.rs
src/network/: mod.rs  server_udp.rs
src/network/game/: connector.rs  mod.rs  packet_codes.rs  packets.rs  request_context.rs  server_udp.rs
src/network/http_api/: server.rs
src/network/http_api/request/: account.rs
src/system/: cli_handler.rs  configuration.rs  error.rs  mod.rs
