[package]
name = "essentia-server"
version = "0.1.0"
authors = ["Sergei Beljakov <1899416+tasmanianfox@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
env_logger = "0.7.0"
hyper = "0.12.35"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4.8"